--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -9,12 +9,11 @@
 		:sass
 			html 
 				height: 100%
-				background: #fff repeat-x bottom
+				background: #fff
 			
 			body 
 				font-family: Helvetica, Arial, Sans-Serif
 				font-size: 14px
-			
 
 			.error_container 
 				display: block
@@ -56,4 +55,3 @@
 	%body
 		.error_container
 			= yield
-			= image_tag "custom_error_pages/bg.png"
