--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -9,7 +9,7 @@
 		:sass
 			html 
 				height: 100%
-				background: #fff
+				background: #fff url(#{image_path "custom_error_pages/bg.png"}) bottom repeat-x
 			
 			body 
 				font-family: Helvetica, Arial, Sans-Serif
