--- a/app/assets/stylesheets/styles/_exception.css.erb
+++ b/app/assets/stylesheets/styles/_exception.css.erb
@@ -3,7 +3,7 @@
 
 .exception {
   display:         block;
-  color:           #fff;
+  color:           rgba(0,0,0,1);
   position:        relative;
   width:           30%;
   top:             48%;
@@ -15,32 +15,33 @@
   font-size:       0.85em;
   border-radius:   5px;
   box-sizing:      border-box;
-  box-shadow:      0px 0px 6px 0px rgba(0,0,0,0.8);
+  box-shadow:      0px 0px 2px 0px rgba(0,0,0,0.5);
   background-clip: border-box;
-  text-shadow:     0 1px 0 rgba(0,0,0,1);
   overflow-x:      hidden;
   overflow-y:      hidden;
   transition:      background 0.1s ease-in-out;
   transform:       translateY(-50%);
 }
 .exception::before {
-  content:           attr(data-status) " Error (" attr(data-response) ") …";
+  content:           attr(data-status) " Error (" attr(data-response) ")";
   display:           block;
   color:             #fff;
-  font-size:         1.75em;
+  font-size:         2em;
   font-weight:       bold;
   text-transform:    capitalize;
   background-color:  rgba(227,11,11,1);
   padding:           1em;
   box-sizing:        border-box;
+  letter-spacing:    -1px;
+  text-shadow:       0 1px 0 rgba(0,0,0,1);
+  border-bottom:     1px solid rgba(0,0,0,0.1);
   background-color:  rgba(227,11,11,1);
-
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), -moz-linear-gradient(top,  rgba(227,11,11,0) 0%, rgba(0,0,0,0.55) 100%); /* FF3.6+ */
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(227,11,11,0)), color-stop(100%,rgba(0,0,0,0.55))); /* Chrome,Safari4+ */
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), -webkit-linear-gradient(top, rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* Chrome10+,Safari5.1+ */
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), -o-linear-gradient(top,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* Opera 11.10+ */
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), -ms-linear-gradient(top,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* IE10+ */
-  background-image: url(<%= asset_url("exception_handler/noise.png") %>), linear-gradient(to bottom,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* W3C */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -moz-linear-gradient(top,  rgba(227,11,11,0) 0%, rgba(0,0,0,0.55) 100%); /* FF3.6+ */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(227,11,11,0)), color-stop(100%,rgba(0,0,0,0.55))); /* Chrome,Safari4+ */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -webkit-linear-gradient(top, rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* Chrome10+,Safari5.1+ */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -o-linear-gradient(top,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* Opera 11.10+ */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -ms-linear-gradient(top,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* IE10+ */
+  background-image:  url(<%= asset_url("exception_handler/noise.png") %>), linear-gradient(to bottom,  rgba(227,11,11,0) 0%,rgba(0,0,0,0.55) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007a07ed', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
 .exception::after {
@@ -48,26 +49,39 @@
   display:       block;
   padding:       1em;
   font-size:     0.9em;
+  color:         rgba(255,255,255,1);
   background:    rgba(0,0,0,0.5);
 }
 .exception:hover { cursor: pointer; }
 
 .exception span:before {
-  display: block;
-  content: url(<%= asset_url("exception_handler/alert.png") %>);
-  padding: 5em 0;
-  text-align: center;
+  display:         block;
+  content:         url(<%= asset_url("exception_handler/alert.png") %>);
+  padding:         5em 0 3.5em;
+  text-align:      center;
+}
+.exception span {
+  position:         relative;
+  display:          block;
+  min-height:       288px;
+  color:            rgba(255,255,255,1);
+  padding:          0 2em 3.5em;
+  box-sizing:       border-box;
+  background:       rgba(9,0,1,1) url(<%= asset_url("exception_handler/alert.jpg") %>) top center no-repeat;
+
+  border-width:     0 1px;
+  border-style:     solid;
+  border-color:     rgba(255,255,255,0.065);
 }
 .exception span:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 2px;
 
-  background: rgba(0,0,0,0.35);
+  display:  block;
+  position: absolute;
+  left:     0;
+  top:      0;
+  width:    100%;
+  height:   3px;
+  background: rgba(0,0,0,0.5);
   background: -moz-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0.35)), color-stop(100%, rgba(0,0,0,0)));
   background: -webkit-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
@@ -76,27 +90,12 @@
   background: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
 }
-.exception span {
-  position: relative;
-  display: block;
-  min-height: 288px;
-  padding: 0 2em 3.5em;
-  box-sizing: border-box;
-  background: #000 url(<%= asset_url("exception_handler/alert.jpg") %>) top center no-repeat;
-  background-size: cover;
-  text-align: center;
-
-  border-width: 0 1px;
-  border-style: solid;
-  border-color: rgba(255,255,255,0.065);
-}
 .exception span strong {
-  display: block;
-  margin-bottom: 0.5em;
-  margin-top: 0.25em;
-  font-size: 1.95em;
-  text-transform: uppercase;
-  text-decoration: underline;
+  display:          block;
+  margin-bottom:    0.5em;
+  margin-top:       0.25em;
+  font-size:        2em;
+  text-transform:   uppercase;
 }
 
 /* ---------------------------------------------------- */
