--- a/app/assets/stylesheets/styles/_exception.css.erb
+++ b/app/assets/stylesheets/styles/_exception.css.erb
@@ -5,14 +5,13 @@
   display:         block;
   color:           rgba(0,0,0,1);
   position:        relative;
-  width:           30%;
+  width:           20%;
   top:             48%;
   margin:          auto;
   background:      rgba(255,255,255,0.15);
   border:          1px solid rgba(0,0,0,1);
-  max-width:       450px;
+  max-width:       400px;
   min-width:       350px;
-  font-size:       0.85em;
   border-radius:   5px;
   box-sizing:      border-box;
   box-shadow:      0px 0px 2px 0px rgba(0,0,0,0.5);
@@ -23,18 +22,18 @@
   transform:       translateY(-50%);
 }
 .exception::before {
-  content:           attr(data-status) " Error (" attr(data-response) ")";
+  content:           url(<%= asset_url("exception_handler/icon.png") %>) "  " attr(data-response);
   display:           block;
-  color:             #fff;
-  font-size:         2em;
+  color:             rgba(255,255,255,1);
+  font-size:         1.25em;
   font-weight:       bold;
   text-transform:    capitalize;
-  background-color:  rgba(227,11,11,1);
+  background-color:  rgba(0,0,0,1);
   padding:           1em;
   box-sizing:        border-box;
-  letter-spacing:    -1px;
   text-shadow:       0 1px 0 rgba(0,0,0,1);
-  border-bottom:     1px solid rgba(0,0,0,0.1);
+  line-height:       1em;
+  vertical-align:    middle;
   background-color:  rgba(227,11,11,1);
   background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -moz-linear-gradient(top,  rgba(227,11,11,0) 0%, rgba(0,0,0,0.55) 100%); /* FF3.6+ */
   background-image:  url(<%= asset_url("exception_handler/noise.png") %>), -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(227,11,11,0)), color-stop(100%,rgba(0,0,0,0.55))); /* Chrome,Safari4+ */
@@ -48,7 +47,7 @@
   content:       attr(data-rails) " \203A\203A  Our developers have been notified. Click here to go home.";
   display:       block;
   padding:       1em;
-  font-size:     0.9em;
+  font-size:     0.8em;
   color:         rgba(255,255,255,1);
   background:    rgba(0,0,0,0.5);
 }
@@ -57,46 +56,30 @@
 .exception span:before {
   display:         block;
   content:         url(<%= asset_url("exception_handler/alert.png") %>);
-  padding:         5em 0 3.5em;
+  padding:         3em 0;
   text-align:      center;
+  border-bottom:   2px solid rgba(255,255,255,0.15);
 }
 .exception span {
   position:         relative;
   display:          block;
   min-height:       288px;
   color:            rgba(255,255,255,1);
-  padding:          0 2em 3.5em;
+  padding:          0 2.5em 2.5em;
   box-sizing:       border-box;
-  background:       rgba(9,0,1,1) url(<%= asset_url("exception_handler/alert.jpg") %>) top center no-repeat;
+  background:       rgba(14,0,0,1) url(<%= asset_url("exception_handler/alert.jpg") %>) top center no-repeat;
 
   border-width:     0 1px;
   border-style:     solid;
   border-color:     rgba(255,255,255,0.065);
 }
-.exception span:after {
-
-  display:  block;
-  position: absolute;
-  left:     0;
-  top:      0;
-  width:    100%;
-  height:   3px;
-  background: rgba(0,0,0,0.5);
-  background: -moz-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0.35)), color-stop(100%, rgba(0,0,0,0)));
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
-  background: -o-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
-  background: -ms-linear-gradient(top, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
-  background: linear-gradient(to bottom, rgba(0,0,0,0.35) 0%, rgba(0,0,0,0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
-}
 .exception span strong {
   display:          block;
-  margin-bottom:    0.5em;
-  margin-top:       0.25em;
   font-size:        2em;
+  margin:           1em 0 0.25em;
   text-transform:   uppercase;
 }
-
+.exception span p { display: block; margin-top: 1em; text-decoration: underline; }
+.exception span p:before { content: "← "; }
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
