--- a/app/assets/stylesheets/styles/_footer.css.erb
+++ b/app/assets/stylesheets/styles/_footer.css.erb
@@ -12,13 +12,13 @@ footer {
 }
 footer a       {
   display: inline-block;
-  opacity: 0.55;
   margin-right: -4px;
   padding: 1.5em 0.3em;
+  vertical-align: middle;
   transition: opacity 0.15s ease-in-out;
 }
-footer a:hover { opacity: 1; text-decoration: none; }
-footer a img   { width: 22px; vertical-align: middle; }
+footer a:hover { text-decoration: none; }
+footer a img   { width: 30px; vertical-align: middle; }
 
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
