--- a/app/views/layouts/exception.html.erb
+++ b/app/views/layouts/exception.html.erb
@@ -14,7 +14,7 @@
   <% if ExceptionHandler.config.try(:social) %>
     <%= content_tag :footer do %>
       <% ExceptionHandler.config.social.each do |k,v| %>
-        <%= link_to image_tag("exception_handler/connect/#{k}.png"), ExceptionHandler::Config::SOCIAL[k] + "/" + v, id: k, title: "#{k.to_s.titleize} Feed" if v %>
+        <%= link_to image_tag("exception_handler/connect/#{k}.png"), ExceptionHandler::Config::SOCIAL[k] + "/" + v, id: k, title: "#{k.to_s.titleize} Feed", target: :blank if v %>
       <% end %>
     <% end %>
   <% end %>
