--- a/app/assets/stylesheets/styles/_exception.css.erb
+++ b/app/assets/stylesheets/styles/_exception.css.erb
@@ -15,7 +15,7 @@
   box-sizing:       border-box;
   box-shadow:       0px 0px 2px 0px rgba(0,0,0,0.5);
   background:       rgba(16,0,1,1);
-  background-image: linear-gradient(top, rgba(16,0,1,1) 70%,rgba(0,0,0,1) 100%);
+  background-image: linear-gradient(to bottom, rgba(16,0,1,1) 70%,rgba(0,0,0,1) 100%);
   background-clip:  content-box;
   overflow-x:       hidden;
   overflow-y:       hidden;
