--- a/app/views/layouts/exception.html.erb
+++ b/app/views/layouts/exception.html.erb
@@ -9,7 +9,7 @@
     <%= stylesheet_link_tag :exception_handler %>
     <%= favicon_link_tag "exception_handler/favicon.ico" %>
 
-    <% if x = ExceptionHandler.config.option(@exception.status, :background) %>
+    <% if x = ExceptionHandler.config.options(@exception.status) %>
       <style>body { background: url("<%= asset_path x %>") center center no-repeat !important; background-size: cover !important; }</style>
     <% end %>
 
