--- a/app/assets/stylesheets/exception_handler.css.erb
+++ b/app/assets/stylesheets/exception_handler.css.erb
@@ -15,4 +15,9 @@
 */
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
+/*
+  *= link_tree ../images
+*/
+/* ---------------------------------------------------- */
+/* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
