--- a/app/assets/stylesheets/styles/_exception.css.erb
+++ b/app/assets/stylesheets/styles/_exception.css.erb
@@ -53,6 +53,7 @@
   border-color:  rgba(255,255,255,0.09);
   border-style:  solid
 }
+.exception:hover { cursor: pointer; }
 
 .exception span:before {
   display:         block;
