--- a/app/assets/stylesheets/styles/_exception.css.erb
+++ b/app/assets/stylesheets/styles/_exception.css.erb
@@ -53,7 +53,8 @@
   border-color:  rgba(255,255,255,0.09);
   border-style:  solid
 }
-.exception:hover { cursor: pointer; }
+.exception:hover       { cursor: pointer; }
+.exception:hover:after { text-decoration: underline; }
 
 .exception span:before {
   display:         block;
