--- a/app/assets/stylesheets/styles/_base.css.erb
+++ b/app/assets/stylesheets/styles/_base.css.erb
@@ -4,19 +4,12 @@
 /* ---------------------------------------------------- */
 /* ---------------------------------------------------- */
 
-/*
-  *= link_tree ../../images
-*/
-
-/* ---------------------------------------------------- */
-/* ---------------------------------------------------- */
-
 *           { margin: 0; }
 html, body  { height: 100%; }
 html        {
 	height:          100%;
   color:           #fff;
-	background:      #010008 url(<%= asset_url("exception_handler/bg.jpg") %>) top left no-repeat;
+	background:      #121212;
 	background-size: 100% 100%;
   box-sizing:      border-box;
 }
