--- a/app/views/exception_handler/mailers/new_exception.erb
+++ b/app/views/exception_handler/mailers/new_exception.erb
@@ -1,4 +1,4 @@
-<h1><%= Rails.application.class.parent_name %> (<%= Rails.env.titleize %>)</h1>
+<h1>Rails Error (<%= Rails.env.titleize %>)</h1>
 
 <strong><u><%= @exception.response %> (<%= @exception.status %>)</u></strong>
 <p><%= @exception.message %></p>
